# LiBiaoDemo

libiaodemo/: .gitignore  build.gradle  settings.gradle
libiaodemo/app/: build.gradle
libiaodemo/app/src/main/: AndroidManifest.xml
libiaodemo/docs/as/: as.md
libiaodemo/docs/flutter/: flutter.md
libiaodemo/docs/jetpack/WorkManager/: WorkManager.md
libiaodemo/docs/matrix/ResourceCanary/: ResourceCanary.md
libiaodemo/docs/matrix/TraceCanary/: Matrix-TraceCanary.md
libiaodemo/docs/memory/2020/: Glide Gif.md  内存监控方案.md  内存知识点.md  图片内存优化.md  金管家app内存优化方案.md
libiaodemo/docs/memory/2021/: 内存优化小组内存分析规划-2021.md
libiaodemo/docs/other/: app屏幕适配方案.md  平铺和平收动画的实现.md  积累.md
libiaodemo/docs/src/main/: AndroidManifest.xml
libiaodemo/func/androidcomponent/: build.gradle
libiaodemo/func/androidcomponent/src/main/: AndroidManifest.xml
libiaodemo/func/animation/: build.gradle
libiaodemo/func/animation/src/main/: AndroidManifest.xml
libiaodemo/func/exoplayer/: build.gradle
libiaodemo/func/exoplayer/src/main/: AndroidManifest.xml
libiaodemo/func/lottie/: build.gradle
libiaodemo/func/lottie/src/main/: AndroidManifest.xml
libiaodemo/java/: build.gradle
libiaodemo/jni/: .gitignore  CMakeLists.txt  build.gradle
libiaodemo/jni/src/main/: AndroidManifest.xml
libiaodemo/jni/src/main/cpp/: CMakeLists.txt  com_libiao_libiaodemo_jni_demo_JNITest.h  main.cpp
libiaodemo/jni/src/main/cpp/doc/: c函数.md  c指针.md  c语言中static关键字用法.md
libiaodemo/jni/src/main/java/com/libiao/libiaodemo/jni/: TestJniActivity.java
libiaodemo/jni/src/main/java/com/libiao/libiaodemo/jni/demo/: JNITest.java  JNI编程步骤.md
libiaodemo/jni/src/main/jniLibs/ffmpeg/: cmdutils.h  ffmpeg.c
libiaodemo/jni/src/main/jniLibs/ffmpeg/libavutil/: ffversion.h
libiaodemo/jni/src/main/res/layout/: jni_main.xml
libiaodemo/kotlin/: build.gradle
libiaodemo/kotlin/src/main/: AndroidManifest.xml
libiaodemo/libiaodemo_flutter_module/: pubspec.yaml
libiaodemo/libiaodemo_flutter_module/lib/: main.dart
libiaodemo/matrix/: build.gradle
libiaodemo/matrix/demo/: build.gradle
libiaodemo/matrix/demo/src/main/: AndroidManifest.xml
libiaodemo/matrix/matrix-android-commons/: build.gradle
libiaodemo/matrix/matrix-android-lib/: build.gradle
libiaodemo/matrix/matrix-apk-canary/: build.gradle
libiaodemo/matrix/matrix-apk-canary/src/: apk-checker-config.json
libiaodemo/matrix/matrix-commons/: build.gradle
libiaodemo/matrix/matrix-io-canary/: build.gradle
libiaodemo/matrix/src/main/: AndroidManifest.xml
libiaodemo/okhttp/: build.gradle
libiaodemo/okhttp/src/main/: AndroidManifest.xml
(+240 files in other folders)
